# voice-agent

./: .gitignore  README.md  justfile
.kilocode/rules/: memory-bank-instructions.md
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
agent/: .env.development.example  .gitignore  entrypoint.py  env.py  health_server.py  health_state.py  main.py  pyproject.toml
agent/cognition/: responses.json  system_prompt.md  tools.json  utils.py
agent/cognition/chat_session/: chat_session_agent.py  chat_session_livekit.py
agent/cognition/tools/: data_bucket_cart_add.py  data_bucket_cart_remove.py  data_bucket_cart_replace.py  data_bucket_selection_add.py  data_bucket_selection_remove.py  data_bucket_selection_replace.py  feature_ask_knowledge_base_question.py  feature_benchmark_products_compare.py  feature_benchmark_products_generate.py  feature_conclusion_finish.py  feature_conclusion_order.py  feature_product_presentation_display.py  feature_product_presentation_producer.py  feature_search_products_highlight.py  feature_search_products_search.py  session_memory_update.py
docker/dev/: Dockerfile  docker-compose.yml
docker/devtools/: README.md  docker-compose.yml
docker/k8/: .gitignore  README-config.md  README-multi-env.md  README-secrets.md  README.md
docker/k8/config/: .env.k8s.prod.example
docker/k8/helm-chart/: traefik-values.yml
docker/prod/: agent.Dockerfile  front.Dockerfile
docs/dev/agent/: livekit.md
front/: .env.development.example  .gitignore  astro.config.mjs  package.json  tsconfig.json
front/src/: env.d.ts
(+59 files in other folders)
